Chore: Styled-Component 라이브러리 추가

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
@@ -41,5 +42,8 @@
   },
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
